Fix failing to find display

--- a/meson.build
+++ b/meson.build
@@ -8,5 +8,6 @@ executable(
         dependency('x11')
     ],
     install: true,
-    install_dir: '/usr/bin'
+    install_dir: '/usr/bin',
+    link_args: ['-lX11']
 )
