Buildsystem: Respect original tinyvm

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,8 @@
-project('tinywm-vala', 'vala', 'c')
+project('tinywm-vala',
+    'vala', 'c',
+    default_options: ['optimization=s', 'warning_level=1'])
 
-add_project_arguments('--debug', language: 'vala')
+add_project_arguments(['-pedantic'], language: 'c')
 
 executable(
     meson.project_name(),
@@ -9,6 +11,5 @@ executable(
         dependency('glib-2.0'),
         dependency('x11')
     ],
-    install: true,
     link_args: ['-lX11']
 )
