meson: Coding style
- Use 2 spaces
- Use trailing commans when possible
- Declare dependencies as a variable to keep "executable" clean

--- a/meson.build
+++ b/meson.build
@@ -1,15 +1,17 @@
 project('tinywm-vala',
-    'vala', 'c',
-    default_options: ['optimization=s', 'warning_level=1'])
+  'vala', 'c',
+  default_options: ['optimization=s', 'warning_level=1'])
 
 add_project_arguments(['-pedantic'], language: 'c')
 
+dependencies = [
+  dependency('glib-2.0'),
+  dependency('x11'),
+]
+
 executable(
-    meson.project_name(),
-    'tinywm.vala',
-    dependencies: [
-        dependency('glib-2.0'),
-        dependency('x11')
-    ],
-    link_args: ['-lX11']
+  meson.project_name(),
+  'tinywm.vala',
+  dependencies: dependencies,
+  link_args: ['-lX11'],
 )
